--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,19 @@
       crossorigin="anonymous"
     ></script>
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <title>Portfoilio</title>
+
+<!-- google analytics start -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G43YMBPTZF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G43YMBPTZF');
+</script>
+<!-- google analytics end -->
+<title>Portfoilio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
